MapReduce in APplication